Fix allineamento dati Postman al diagramma di progetto